# irsl_raspi_controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe.md  package.xml  run.sh  setup.py
build_rpi/: build.md  exec_robot.conf  supervisord.conf
build_system/: build_hardware.md  build_rasspberypi.md
documents/build_system/: .bash_profile  build_hardware.md  build_raspi.md  build_raspi_roso.md  roscore.service
documents/sensor_cable/: build.md
documents/tips/: tips.md
irsl_raspi_controller/: raspi_controller.py  raspi_controller_shm.py
launch/: run_robot.launch  run_robot_shm.launch
new_sample/: rpi_controleller.py  send_settings.ipynb  start_ri.ipynb
samples/: run.sh
samples/ipynb/: send_settings.ipynb  start_ri.ipynb
samples/userdir/: controller_config.yaml  dx_controller_config.yaml  dx_servo_config.yaml  robot_interface.yaml  robot_sensor.yaml  ros_settings_sample.yaml  rpi_controleller.py  sample_supervisor.ipynb  sensor_config.yaml
sensor_cable/: build.md
userdir/: dynamixel_config.yaml  robot_interface.yaml  ros_settings_sample.yaml  rpi_controleller.py  sample.ipynb  sample_ssh.ipynb  sample_supervisor.ipynb  test_robot.roboasm
